ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration5/input.ts.stderr
error: Expected ;, got public
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration5/input.ts:2:24
  |
2 |    [a: string]: number public v: number
  |                        ^^^^^^

